Character allocation enabled

--- a/client/lobby.html
+++ b/client/lobby.html
@@ -1,4 +1,4 @@
-<h1>Players currently online</h1>
+<h1>Players currently online (game auto start at 6 players)</h1>
 <div ng-repeat='player in players'>
   <p>{{player}}</p>
 </div>
